Cherry pick commit 545dfaf - pull request from davedev. Implemented OrderBy, OrderByDescending, ThenBy and ThenByDescending, with unit tests.  This also required me to update to the HomoIcon tool and the Qbservable parity unit test.

--- a/Rx.NET/Source/Tests.System.Reactive/Tests.System.Reactive.csproj
+++ b/Rx.NET/Source/Tests.System.Reactive/Tests.System.Reactive.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="App.cs" />
     <Compile Include="DispatcherHelpers.cs" />
+    <Compile Include="Dummies\DummyOrderedObservable.cs" />
     <Compile Include="Semaphore.cs" />
     <Compile Include="Stress\Core\Disposables\Composite.cs" />
     <Compile Include="Stress\Core\Disposables\Serial.cs" />
